svn
    - support encoding from .ogg input file.
    - don't change samplerate and audio channel unless we use command line
      options.
    - don't change the resolution image, unless we use the presets or the
      -x or -y options. (old default was to encode to preset preview)
    - change the audio quality levels that were multiplied by 0.99, now 
      match the quality settings of oggenc, e.g. -a2 == -q2.

0.15     2005-08-31
    - ti.dropframes_p = 0 so we do not loos half of the frames.
    - also increase keyframe interval for better search support.
    - this time the windows build also supports ac3 decoding again.

0.14     2005-08-15
    - add support for v4l input devices
    - update to latest version of ffmpeg-cvs(now uses pkg-config)
    - --audiostream id, new option to select an audio stream if 
      input has more than one audio stream
    - fixed ogg muxer

0.13     2005-03-12
    - add new command line options, starttime, endtime, sharpness, keyint
    - fix compile issues with new version of faad
    - better support for stdout on win32,
       to allow ezstream streaming non-theora source types
    - deinterlace only input marked as interlaced by default
    - handle input files with frame sizes that are not a multiple of 16
    - document --channels to resample audio to i.e. 1 channel

0.12     2004-11-18
    - add more command line options, for bitrate modes, metadata
    - update kino plugin

0.11     2004-09-04
    - changed default, then called without parameters to -p preview mode
    - changed PREVIEW(PAL) settings to 384x288 to make pixel aspect ratio 1:1
    - performance improvement if compiled with theora-mmx 
      [http://svn.xiph.org/branches/theora-mmx]
    - new option: --aspect to define frame aspect ratio: i.e. 4:3 or 16:9

0.10.2     2004-07-17
    - add cropping support
    - remove support for ffmpeg<0.4.9-pre1
    - change configure.ac and Makefile.am to better build with
      mingw32

0.10.1     2004-07-15 21:03:15