@@ -1,5 +1,5 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.TH FFMPEG2THEORA 1 "June 14, 2005"
+.TH FFMPEG2THEORA 1 "November 27, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -13,7 +13,8 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-ffmpeg2theora \- command-line converter to create Ogg Theora files
+ffmpeg2theora \- command-line converter to create Ogg Theora and Ogg
+Vorbis files.
 .SH SYNOPSIS
 .B ffmpeg2theora
 .RI [ options ] " inputfile" 
@@ -39,7 +40,7 @@ be written to \fIinputfile\fP.ogg.  To output to standard output, specify
 [0 to 10] Set encoding quality for video (default: 5).
 .TP
 .B \-V, \-\-videobitrate
-[45 to 2000] Set encoding bitrate for video.
+[45 to 2000] Set encoding bitrate for video (in kb/s).
 .TP
 .B \-x, \-\-width
 Scale to given width.
@@ -53,6 +54,11 @@ Define frame aspect ratio (e.g. 4:3, 16:9).
 .B \-\-crop[top|bottom|left|right]
 Crop input before resizing.
 .TP
+.B \-\-optimize
+Optimize output Theora video, using a full search for motion vectors
+instead of a hierarchical one. This can reduce video bitrate about 5%,
+but it is slower and therefore is disabled by default.
+.TP
 .B \-S, \-\-sharpness
 [0 to 2] Sharpness of images (default: 2).  Note: lower values make the video
 sharper.
@@ -61,13 +67,13 @@ sharper.
 [8 to 65536] Set keyframe interval (default: 64).
 .TP
 .B \-a, \-\-audioquality
-[-1 to 10] Set encoding quality for audio (default: 1).
+[-2 to 10] Set encoding quality for audio (default: 1).
 .TP
 .B \-A, \-\-audiobitrate
-[45 to 2000] Set encoding bitrate for audio.
+[32 to 2000] Set encoding bitrate for audio (in kb/s).
 .TP
 .B \-H, \-\-samplerate
-Set output samplerate in Hz.
+Set output samplerate (in Hz).
 .TP
 .B \-c, \-\-channels
 Set number of output channels.
